--- a/experiences.html
+++ b/experiences.html
@@ -27,7 +27,7 @@
         <li><a href="#">NCC-Megan</a></li>
         <li><a href="/BrewKettleExperience">The Brew Kettle Experiences</a></li>
         <li><a href="/BridgestoneTireExperience">The Bridgestone Experience</a></li>
-        
+        <li><a href="/sprintDEMO">Sprint Experience!</a></li>
         </ul>
     </div>
 
@@ -35,9 +35,7 @@
 </div>
   
   <footer>
-   <ul>
-   <li><a href="mailto:weisenbe@kent.edu">email</a></li>
-   </ul>
+  
   </footer>
   </body>
 
