--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
   <meta name="apple-mobile-web-app-capable" content="yes">
 
-  <title>Sprint Video</title>
+  <title>Sprint DEMO</title>
 
   <script src="//cdn.8thwall.com/web/aframe/8frame-0.9.0.min.js"></script>
 
@@ -39,7 +39,7 @@
 	  <img id="SprintImage" src="https://static.wixstatic.com/media/53058a_d65b0fffe7794b6293173d3bd3688cfd~mv2.jpg/v1/fill/w_480,h_640/Sprint-target.jpg">
       <video
         id="currentVideo"
-        autoplay="true"
+        autoplay="false"
         crossorigin="anonymous"
         loop="false"
         src = "https://video.wixstatic.com/video/53058a_ca4451222ca44212a70303e3b8b94a71/720p/mp4/file.mp4">
@@ -91,11 +91,11 @@
   </a-scene>
 <script>
 
-var linkedButton = document.getElementById("button");
-var video = document.getElementById("currentVideo");
-video.onended = function() {
-	linkButton.style.opacity = 1;
-}
+//var linkedButton = document.getElementById("button");
+//var video = document.getElementById("currentVideo");
+// video.onended = function() {
+// 	linkButton.style.opacity = 1;
+// }
 
 function showButton(){
   document.getElementById("button1").style .display="inline";
