--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -58,7 +58,6 @@
     <a-light type="ambient" intensity="1"></a-light>
 
     <!-- Note: "name:" must be set to the name of the image target uploaded to the 8th Wall Console -->
-   	<button>Play</button>
     <a-entity 
       xrextras-named-image-target="name: sprint"
       xrextras-play-video="video: #currentVideo; thumb: #sprintImage; canstop: true"
@@ -82,7 +81,7 @@
         opacity: 0;
         z-index: 1;
         display:none">
-        <a href="https://businesssolutions.sprint.com/save/?ECID=vanity:save">More Info</a>
+        <a href="https://businesssolutions.sprint.com/save/?ECID=vanity:save">Visit Page</a>
       </button>
      
     
