--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -97,9 +97,9 @@
 // }
 
 function showButton(){
-  document.getElementById("button1").style .display="inline";
+  document.getElementById("button1").style.display="block";
 }
-setTimeout("showButton()",60000);
+setTimeout("showButton()",54000);
 
 </script>
 
