--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -73,7 +73,7 @@
         background-color: white;
         position: fixed;
         font-size: 4;
-        display: none;
+        display: inline-block;
         bottom: 2%; 
         height: 50px;
         width: 41.6px;
@@ -96,10 +96,10 @@
 // 	linkButton.style.opacity = 1;
 // }
 
-function showButton(){
-  document.getElementById("button1").style.display="inline-block";
-}
-setTimeout("showButton()", 54000);
+//function showButton(){
+ // document.getElementById("button1").style.display="inline-block";
+//}
+//setTimeout("showButton()", 47000);
 
 </script>
 
