--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -73,11 +73,11 @@
         background-color: white;
         position: fixed;
         font-size: 4;
-        display: inline-block;
+        display: none;
         bottom: 2%; 
         height: 50px;
         width: 41.6px;
-        left: 50%;
+        left: 40%;
         text-align: center;
         z-index: 1;">
         <a href="https://businesssolutions.sprint.com/save/?ECID=vanity:save">Visit Page</a>
@@ -93,10 +93,10 @@
 // 	linkButton.style.opacity = 1;
 // }
 
-//function showButton(){
- // document.getElementById("button1").style.display="inline-block";
-//}
-//setTimeout("showButton()", 47000);
+function showButton(){
+  document.getElementById("button1").style.display="inline-block";
+}
+setTimeout("showButton()", 47000);
 
 </script>
 
