--- a/experiences.html
+++ b/experiences.html
@@ -28,6 +28,7 @@
         <li><a href="/BrewKettleExperience">The Brew Kettle Experiences</a></li>
         <li><a href="/BridgestoneTireExperience">The Bridgestone Experience</a></li>
         <li><a href="/sprintDEMO">Sprint Experience!</a></li>
+        <li><a href="/AkronRotary">Akron Rotary Regatta Club! Experience</a></li>
         </ul>
     </div>
 
