--- a/WebDesign/webdesign.html
+++ b/WebDesign/webdesign.html
@@ -12,9 +12,9 @@
   <body>
     <nav>
 <ul>
-<li><a href="/">Home</a></li>
-<li><a href="/index">Class Files</a></li>
-<li><a href="/webdesign">Web Design</a><li>
+<li><a href="/webdesign/webdesign">Home</a></li>
+<li><a href="/webdesign/classfiles">Class Files</a></li>
+
 
 </ul>
     </nav>
