--- a/WebDesign/classfiles.html
+++ b/WebDesign/classfiles.html
@@ -21,14 +21,11 @@
 
       <div class="Experiences">
       <h1>Experiences</h1>
-      <p>Below will be links to all my current experiences if you're interested in them: </p>
+      <p>Below will be links to all portfolio items </p>
 
       <ul class="contacts">
         <li><a href="/webdesign/mathhigh">Portfolio Item 1 Week 1</a></li>
-        <li><a href="/BrewKettleExperience">The Brew Kettle Experiences</a></li>
-        <li><a href="/BridgestoneTireExperience">The Bridgestone Experience</a></li>
-        <li><a href="/sprintDEMO">Sprint Experience!</a></li>
-        <li><a href="/AkronRotary">Akron Rotary Regatta Club! Experience</a></li>
+
         </ul>
     </div>
 
