--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   		<div class="blurb">
 			<h1>Welcome to the page!</h1>
-			<p>This will page will host all of current projects being developed! 1 </p>
+			<p>This will page will host all of current projects being developed!</p>
 		</div> 
 
 
