--- a/WebDesign/classfiles.html
+++ b/WebDesign/classfiles.html
@@ -20,11 +20,12 @@
 <div class="container">
 
       <div class="Experiences">
-      <h1>Experiences</h1>
+      <h1>Class Files!</h1>
       <p>Below will be links to all portfolio items </p>
 
       <ul class="contacts">
-        <li><a href="/webdesign/mathhigh">Portfolio Item 1 Week 1</a></li>
+        <li>cPortfolio Item 1 Week 1</a></li>
+        <li><a href="/webdesign/home.html">Portfolio Item 2 Week 2</a></li>
 
         </ul>
     </div>
