--- a/WebDesign/mathhigh.html
+++ b/WebDesign/mathhigh.html
@@ -8,12 +8,12 @@ Author: William Eisenberger
 Date 7/25/2019
  -->
 
-<link rel="stylesheet" type="text/css" href="class css files/mhstyles.css">
-<script src="class js files/modernizer-1.5.js"></script>
+<link rel="stylesheet" type="text/css" href="css/mhstyles.css">
+<script src="js/modernizer-1.5.js"></script>
 </head>
 
 <body>
-<img src="class image files/mhlogo.jpg" alt="Math High">
+<img src="image/mhlogo.jpg" alt="Math High">
 
 	<article>
 		<h1>Leonhard Euler (1707-1783)</h1>
