updated Portfolio Item 2

--- a/webdesign/slide4.html
+++ b/webdesign/slide4.html
@@ -19,7 +19,7 @@
 
       <meta charset="UTF-8" />
       <title>Fiddler on the Roof Junior Slide 4</title>
-      <script src="js/webdesign/modernizr-1.5.js"></script>
+      <script src="js/modernizr-1.5.js"></script>
       <link href="css/fidstyles.css" rel="stylesheet" type="text/css" />
       
    </head>
@@ -31,11 +31,11 @@
 
       <nav>
            <ul>
-            <li><a href="/webdesign/home"></a><img src="image/home.png" alt="Home Page" title="Home Page"/></li>
-            <li><a href="/webdesign/slide1"></a><img src="image/first.png" alt="First Slide" title="Slide 1"/></li>
-            <li><a href="/webdesign/slide3"></a><img src="image/prev.png" alt="Previous Slide" title="Slide 3"/></li>
-            <li><a href="/webdesign/slide5"></a><img src="image/next.png" alt="Next Slide" title="Slide 5"/></li>
-            <li><a href="/webdesign/slide6"></a><img src="image/last.png" alt="Last Slide" title="Slide 6"/></li>
+            <li><a href="/webdesign/home"><img src="image/home.png" alt="Home Page" title="Home Page"/></a></li>
+            <li><a href="/webdesign/slide1"><img src="image/first.png" alt="First Slide" title="Slide 1"/></a></li>
+            <li><a href="/webdesign/slide3"><img src="image/prev.png" alt="Previous Slide" title="Slide 3"/></a></li>
+            <li><a href="/webdesign/slide5"><img src="image/next.png" alt="Next Slide" title="Slide 5"/></a></li>
+            <li><a href="/webdesign/slide6"><img src="image/last.png" alt="Last Slide" title="Slide 6"/></a></li>
          </ul>     
       </nav>
            <ul>
