--- a/WebDesign/webdesign.html
+++ b/WebDesign/webdesign.html
@@ -12,8 +12,8 @@
   <body>
     <nav>
 <ul>
-<li><a href="/webdesign/webdesign">Home</a></li>
-<li><a href="/webdesign/classfiles">Class Files</a></li>
+<li><a href="/webdesign/webdesign.html">Home</a></li>
+<li><a href="/webdesign/classfiles.html">Class Files</a></li>
 
 
 </ul>
@@ -22,7 +22,7 @@
 
   		<div class="blurb">
 			<h1>Welcome to the page!</h1>
-			<p>Hi Evren! Click on the class files link above to access all of the current class files. </p>
+			<p>Hi Evren! Click on the class files link above to access all of the portfolio files. </p>
 		</div> 
 
 
