--- a/webdesign/home.html
+++ b/webdesign/home.html
@@ -36,10 +36,10 @@
             rehearsals and set building and promotion, it really paid off. 
             I have gotten so many enthusiastic comments about the wonderful 
             performances that I've started putting up a 
-            slide show
+            <a href="webdesign/slide1.html">slide show</a>
             of the production. Please feel free to download the files from 
             the Web site. If you want high resolution photo files, please 
-            contact me. 
+            <a href="mailto:weisenbe@kent.edu?subject=Digital%20Photo">contact me</a></p>. 
          </p>
          <p>Once again: <span><i>BRAVO!!!</i></span> <br />
             -- Mrs. Juroszek
