--- a/webdesign/slide2.html
+++ b/webdesign/slide2.html
@@ -19,7 +19,7 @@
 
       <meta charset="UTF-8" />
       <title>Fiddler on the Roof Junior Slide 2</title>
-      <script src="js/webdesign/modernizr-1.5.js"></script>
+      <script src="js/modernizr-1.5.js"></script>
       <link href="css/fidstyles.css" rel="stylesheet" type="text/css" />
       
    </head>
