--- a/webdesign/slide1.html
+++ b/webdesign/slide1.html
@@ -31,22 +31,22 @@
 
       <nav>
            <ul>
-            <li><a href="/webdesign/home"><img src="image/home.png" alt="Home Page" title="Home Page"/></a></li>
-            <li><a href="/webdesign/slide1"><img src="image/first.png" alt="First Slide" title="Slide 1"/></a></li>
-            <li><a href="/webdesign/slide1"><img src="image/prev.png" alt="Previous Slide" title="Slide 5"/></a></li>
-            <li><a href="/webdesign/slide2"><img src="image/next.png" alt="Next Slide" title="Slide 2"/></a></li>
-            <li><a href="/webdesign/slide6"><img src="image/last.png" alt="Last Slide" title="Slide 6"/></a></li>
+            <li><a href="webdesign/home"><img src="image/home.png" alt="Home Page" title="Home Page"/></a></li>
+            <li><a href="webdesign/slide1"><img src="image/first.png" alt="First Slide" title="Slide 1"/></a></li>
+            <li><a href="webdesign/slide1"><img src="image/prev.png" alt="Previous Slide" title="Slide 5"/></a></li>
+            <li><a href="webdesign/slide2"><img src="image/next.png" alt="Next Slide" title="Slide 2"/></a></li>
+            <li><a href="webdesign/slide6"><img src="image/last.png" alt="Last Slide" title="Slide 6"/></a></li>
          </ul>    
       </nav>
 
       <nav>
          <ul>
-            <li><a href="webdesign/slide1"><img src="image/thumb1.jpg" alt="slide1" title="Slide 1"/></a></li>
-            <li><a href="webdesign/slide2"><img src="image/thumb2.jpg" alt="slide2" title="Slide 2"/></a></li>
-            <li><a href="webdesign/slide3"><img src="image/thumb3.jpg" alt="slide3" title="Slide 3"/></a></li>
-            <li><a href="webdesign/slide4"><img src="image/thumb4.jpg" alt="slide4" title="Slide 4"/></a></li>
-            <li><a href="webdesign/slide5"><img src="image/thumb5.jpg" alt="slide5" title="Slide 5"/></a></li>
-            <li><a href="webdesign/slide6"><img src="image/thumb6.jpg" alt="slide6" title="Slide 6"/></a></li>
+            <li><a href="/slide1"><img src="image/thumb1.jpg" alt="slide1" title="Slide 1"/></a></li>
+            <li><a href="/slide2"><img src="image/thumb2.jpg" alt="slide2" title="Slide 2"/></a></li>
+            <li><a href="/slide3"><img src="image/thumb3.jpg" alt="slide3" title="Slide 3"/></a></li>
+            <li><a href="/slide4"><img src="image/thumb4.jpg" alt="slide4" title="Slide 4"/></a></li>
+            <li><a href="/slide5"><img src="image/thumb5.jpg" alt="slide5" title="Slide 5"/></a></li>
+            <li><a href="/slide6"><img src="image/thumb6.jpg" alt="slide6" title="Slide 6"/></a></li>
          </ul>
       </nav>
 
