--- a/webdesign/home.html
+++ b/webdesign/home.html
@@ -36,7 +36,7 @@
             rehearsals and set building and promotion, it really paid off. 
             I have gotten so many enthusiastic comments about the wonderful 
             performances that I've started putting up a 
-            <a href="webdesign/slide1.html">slide show</a>
+            <a href="/slide1.html">slide show</a>
             of the production. Please feel free to download the files from 
             the Web site. If you want high resolution photo files, please 
             <a href="mailto:weisenbe@kent.edu?subject=Digital%20Photo">contact me</a></p>. 
