--- a/webdesign/webdesign.html
+++ b/webdesign/webdesign.html
@@ -12,8 +12,8 @@
   <body>
     <nav>
 <ul>
-<li><a href="webdesign/webdesign.html">Home</a></li>
-<li><a href="webdesign/classfiles.html">Class Files</a></li>
+<li><a href="/webdesign/webdesign.html">Home</a></li>
+<li><a href="/webdesign/classfiles.html">Class Files</a></li>
 
 
 </ul>
