--- a/webdesign/classfiles.html
+++ b/webdesign/classfiles.html
@@ -24,8 +24,8 @@
       <p>Below will be links to all portfolio items </p>
 
       <ul class="contacts">
-        <li><a href="webdesign/mathhigh.html">Portfolio Item 1 Week 1</a></li>
-        <li><a href="webdesign/home.html">Portfolio Item 2 Week 2</a></li>
+        <li><a href="/webdesign/mathhigh.html">Portfolio Item 1 Week 1</a></li>
+        <li><a href="/webdesign/home.html">Portfolio Item 2 Week 2</a></li>
 
 
         </ul>
