--- a/webdesign/classfiles.html
+++ b/webdesign/classfiles.html
@@ -12,7 +12,7 @@
   <body>
     <nav>
 <ul>
-<li><a href="webdesign/webdesign.html">Home</a></li>
+<li><a href="/webdesign/webdesign.html">Home</a></li>
 >
 
 </ul>
@@ -26,6 +26,14 @@
       <ul class="contacts">
         <li><a href="/webdesign/mathhigh.html">Portfolio Item 1 Week 1</a></li>
         <li><a href="/webdesign/home.html">Portfolio Item 2 Week 2</a></li>
+        <li>Portfolio Item 3</li>
+        <li>Portfolio Item 4</li>
+        <li>Portfolio Item 5</li>
+        <li>Portfolio Item 6</li>
+        <li>Portfolio Item 7 Case Problem 3</li>
+        <li>Portfolio Item 7 Case Problem 4</li>
+        <li>Portfolio Item 8 Case Problem 3</li>
+        <li>Portfolio Item 8 Case Problem 4 </li>
 
 
         </ul>
