--- a/webdesign/feb.html
+++ b/webdesign/feb.html
@@ -20,7 +20,7 @@
 
       <meta charset="UTF-8" />
       <title>February at the Chamberlain Civic Center</title>
-      <script src="modernizr-1.5.js"></script>
+      <script src="js/modernizr-1.5.js"></script>
       <link href="css/ccc.css" rel="stylesheet" type="text/css" />
       <link href="css/calendar.css" rel="stylesheet" type="text/css" />
    </head>
@@ -28,7 +28,7 @@
    <body>
 
       <header>
-         <img src="ccc.jpg" alt="The Chamberlain Civic Center" />
+         <img src="image/ccc.jpg" alt="The Chamberlain Civic Center" />
       </header>
 
       <nav>
@@ -81,6 +81,170 @@
 
 
       <section id="events">
+         <table class="calendar">
+            <caption>Events in February at the CCC</caption>
+               <colgroup>
+                <col class="weekdays" span="5"/>
+                <col class="weekends" span="2"/>
+               </colgroup>
+               <tr>
+                  <th>Sat</th>
+                  <th>Mon</th>
+                  <th>Tue</th>
+                  <th>Wed</th>
+                  <th>Thu</th>
+                  <th>Fri</th>               
+                  <th>Sun</th>
+               </tr>
+               <tr>
+                  <th><h3>26</h3></th>
+
+                  <th><h3>27</h3></th>
+
+                  <th><h3>28</h3></th>
+
+                  <th><h3>29</h3></th>
+
+                  <th><h3>30</h3></th>
+
+                  <th><h3>31</h3></th>   
+
+                  <th><h3>1</h3>
+                  <dt>Taiwan Acrobats</dt>
+                  <dd>8 pm</dd>
+                  <dd>$16/$24/$36</dd>
+                  </th>
+               </tr>            
+            <tr>
+                  <th><h3>2</h3>
+                  <dt>Caron Quartet</dt>
+                  <dd>1 pm</dd>
+                  <dd>$8</dd>
+                  </th>
+                  <th><h3>3</h3></th>
+
+                  <th><h3>4</h3></th>
+
+                  <th><h3>5</h3>
+                  <dt>Joey Gallway</dt>
+                  <dd>8 pm</dd>
+                  <dd>$16/$24/$36</dd>
+                  </th>
+
+                  <th><h3>6</h3></th>
+
+                  <th><h3>7</h3>     
+                  <dt>West Side Story</dt>
+                  <dd>7 pm</dd>
+                  <dd>$24/$36/$64</dd>
+                  </th>
+
+                  <th><h3>8</h3>
+                  <dt>West Side Story</dt>
+                  <dd>7 pm</dd>
+                  <dd>$24/$36/$64</dd>
+                  </th>
+            </tr>
+            <tr>
+                  <th><h3>9</h3>
+                  <dt>Carson Quartet</dt>
+                  <dd>1 pm</dd>
+                  <dd>$8</dd>
+                  </th>
+
+                  <th><h3>10</h3>
+                  <dt>Jazz Masters</dt>
+                  <dd>8 pm</dd>
+                  <dd>$18/$24/$32</dd>
+                  </th>
+
+                  <th><h3>11</h3></th>
+
+                  <th><h3>12</h3></th>
+
+                  <th><h3>13</h3>
+                  <dt>Harlem Choir</dt>
+                  <dd>8 pm</dd>
+                  <dd>$18/$24/$32</dd>
+                  </th>
+
+                  <th><h3>14</h3>
+                  <dt>Chamberlain Symphony</dt>
+                  <dd>8 pm</dd>
+                  <dd>$18/$24/$32</dd>
+                  </th>
+
+                  <th><h3>15</h3>
+                  <dt>Edwin Drood</dt>
+                  <dd>8 pm</dd>
+                  <dd>$24/$36/$44</dd>
+                  </th>
+            </tr>
+            <tr>
+                  <th><h3>16</h3>
+                  <dt>Carson Quartet</dt>
+                  <dd>1 pm</dd>
+                  <dd>$8</dd>
+                  </th>
+
+                  <th><h3>17</h3></th>
+
+                  <th><h3>18</h3></th>
+
+                  <th><h3>19</h3>
+                  <dt>The Yearling</dt>
+                  <dd>7 pm</dd>
+                  <dd>$8/$14/$18</dd>
+                  </th>
+                  <th><h3>20</h3></th>
+
+                  <th><h3>21</h3>               
+                  <dt>An Ellington Tribute</dt>
+                  <dd>8 pm</dd>
+                  <dd>$24/$32/$48</dd>
+                  </th>
+
+                  <th><h3>22</h3>
+                  <dt>Othello</dt>
+                  <dd>8 pm</dd>
+                  <dd>$18/$28/$42</dd>
+                  </th>
+
+            </tr>
+            <tr>
+                  <th><h3>23</h3>
+                  
+                  <dt>Carson Quartet</dt>
+                  <dd>1 pm</dd>
+                  <dd>$8</dd>
+                  </th>
+                  <th><h3>24</h3></th>
+
+
+                  <th><h3>25</h3>
+                  <dt>Madtown Jugglers</dt>
+                  <dd>8 pm</dd>
+                  <dd>$12/$16/$20</dd>
+                  </th>
+
+                  <th><h3>26</h3></th>
+
+                  <th><h3>27</h3></th>
+
+                  <th><h3>28</h3>
+                  <dt>Ralph Williams</dt>
+                  <dd>8 pm</dd>
+                  <dd>$24/$48/$64</dd>
+                  </th>  
+
+                  <th><h3>1</h3>
+                  <dt>Othello</dt>
+                  <dd>8 pm</dd>
+                  <dd>$18/$28/$42</dd>
+                  </th>  
+            </tr>
+         
+         </table>
 
       </section>
 
