--- a/webdesign/feb.html
+++ b/webdesign/feb.html
@@ -88,13 +88,13 @@
                 <col class="weekends" span="2"/>
                </colgroup>
                <tr>
-                  <th>Sat</th>
-                  <th>Mon</th>
-                  <th>Tue</th>
-                  <th>Wed</th>
-                  <th>Thu</th>
-                  <th>Fri</th>               
-                  <th>Sun</th>
+                  <th class="topleft">Sun</th>
+                  <th class="top">Mon</th>
+                  <th class="top">Tue</th>
+                  <th class="top">Wed</th>
+                  <th class="top">Thu</th>
+                  <th class="top">Fri</th>               
+                  <th class="topright">Sat</th>
                </tr>
                <tr>
                   <th><h3>26</h3></th>
