--- a/webdesign/classfiles.html
+++ b/webdesign/classfiles.html
@@ -28,12 +28,12 @@
         <li><a href="/webdesign/home.html">Portfolio Item 2 Week 2</a></li>
         <li><a href="/webdesign/bmtour.html">Portfolio Item 3</li>
         <li><a href="/webdesign/longs.html">Portfolio Item 4</li>
-        <li>Portfolio Item 5</li>
-        <li>Portfolio Item 6</li>
-        <li>Portfolio Item 7 Case Problem 3</li>
-        <li>Portfolio Item 7 Case Problem 4</li>
-        <li>Portfolio Item 8 Case Problem 3</li>
-        <li>Portfolio Item 8 Case Problem 4 </li>
+        <li><a href="/webdesign/feb.html">Portfolio Item 5</li>
+        <li><a href="/webdesign/cssdemo.html">Portfolio Item 6</li>
+        <li><a href="/webdesign/fractal.html">Portfolio Item 7 Case Problem 3</li>
+        <li><a href="/webdesign/byso.html">Portfolio Item 7 Case Problem 4</li>
+        <li><a href="/webdesign/mess.html">Portfolio Item 8 Case Problem 3</li>
+        <li>Portfolio Item 8 Case Problem 4 (Didn't complete)</li>
 
 
         </ul>
