--- a/webdesign/mess.html
+++ b/webdesign/mess.html
@@ -22,11 +22,13 @@
       <meta charset="UTF-8" />
 
       <title>Messier Marathon</title>
-      <script src="modernizr-1.5.js"></script>
+      <script src="js/modernizr-1.5.js"></script>
       
-      <link href="swbase.css" rel="stylesheet" />
+      <link href="css/swbase.css" rel="stylesheet" />
 
-      <link href="swlayout.css" rel="stylesheet" />
+      <link href="css/swlayout.css" rel="stylesheet" />
+      <link href="css/sweffects.css" rel="stylesheet" type="css/stylesheet" />
+      <link href="css/swprint.css" rel="stylesheet" />
 
    </head>
 
@@ -43,7 +45,7 @@
                <li><a href="#">Stars</a></li>
             </ul>
          </nav>
-         <img src="skyweb.png" alt="SkyWeb" />
+         <img src="image/skyweb.png" alt="SkyWeb" />
       </header>
 
 
@@ -53,7 +55,7 @@
          <article>
             <h1>The Messier Objects</h1>
             <p>
-               <img src="messier.png" alt="" />
+               <img src="image/messier.png" alt="" />
                <strong>Messier objects</strong> are stellar objects, classified by astronomer 
                <strong>Charles Messier</strong> in the 18th century, ranging from distant 
                galaxies to star clusters to stellar nebula. The catalog was a major milestone 
@@ -89,7 +91,7 @@
       <section id="right">
          <article>
             <h1>M01: The Crab Nebula</h1>
-            <img id="messimg" src="m01.jpg" alt="" />
+            <img id="messimg" src="image/m01.jpg" alt="" />
             <p>M1, known as the Crab Nebula, is one of the most famous supernova
                remnants in the night sky. The supernova was first noted on July 4, 1054 by
                Chinese astronomers. At its height, the supernova was about four times
@@ -99,7 +101,7 @@
          </article>
          <article>
             <h1>M13: Hercules Globular Cluster</h1>
-            <img id="messimg" src="m13.jpg" alt="" />
+            <img id="messimg" src="image/m13.jpg" alt="" />
             <p>M13 is one of the most prominent and best known globular clusters 
                of the Northern sky. It was discovered in 1714 by the noted English
                astronomer, Edmund Halley. Located in the Hercules constellation, M13 is 
@@ -108,7 +110,7 @@
          </article>
          <article>
             <h1>M16: The Eagle Nebula</h1>
-            <img id="messimg" src="m16.jpg" alt="" />
+            <img id="messimg" src="image/m16.jpg" alt="" />
             <p>M16, better known as the Eagle Nebula, is located in the 
                distant constellation, Serpens. The source of light for M16
                is the high-energy radiation of the massive young stars being
@@ -118,7 +120,7 @@
          </article>
          <article>
             <h1>M20: The Trifid Nebula</h1>
-            <img id="messimg" src="m20.jpg" alt="" />
+            <img id="messimg" src="image/m20.jpg" alt="" />
             <p>M20 is a red emission nebula with a young star cluster located
                at its center. The astronomer John Herschel was the first to use
                the term, "Trifid" to describe this nebula's appearance. Charles
@@ -127,7 +129,7 @@
          </article>
          <article>
             <h1>M27: The Dumbbell Nebula</h1>
-            <img id="messimg" src="m27.jpg" alt="" />
+            <img id="messimg" src="image/m27.jpg" alt="" />
             <p>M27, or the Dumbbell Nebula, was the first planetary nebula
                ever discovered. It is probably similar in structure to the
                Ring Nebula (M57) though its appearance is very different due to
