--- a/webdesign/classfiles.html
+++ b/webdesign/classfiles.html
@@ -26,14 +26,14 @@
       <ul class="contacts">
         <li><a href="/webdesign/mathhigh.html">Portfolio Item 1 Week 1</a></li>
         <li><a href="/webdesign/home.html">Portfolio Item 2 Week 2</a></li>
-        <li><a href="/webdesign/bmtour.html">Portfolio Item 3</li>
-        <li><a href="/webdesign/longs.html">Portfolio Item 4</li>
-        <li><a href="/webdesign/feb.html">Portfolio Item 5</li>
-        <li><a href="/webdesign/cssdemo.html">Portfolio Item 6</li>
-        <li><a href="/webdesign/fractal.html">Portfolio Item 7 Case Problem 3</li>
-        <li><a href="/webdesign/byso.html">Portfolio Item 7 Case Problem 4</li>
-        <li><a href="/webdesign/mess.html">Portfolio Item 8 Case Problem 3</li>
-        <li>Portfolio Item 8 Case Problem 4 (Didn't complete)</li>
+        <li><a href="/webdesign/bmtour.html">Portfolio Item 3</a></li>
+        <li><a href="/webdesign/longs.html">Portfolio Item 4</a></li>
+        <li><a href="/webdesign/feb.html">Portfolio Item 5</a></li>
+        <li><a href="/webdesign/cssdemo.html">Portfolio Item 6</a>a</li>
+        <li><a href="/webdesign/fractal.html">Portfolio Item 7 Case Problem 3</a></li>
+        <li><a href="/webdesign/byso.html">Portfolio Item 7 Case Problem 4</a></li>
+        <li><a href="/webdesign/mess.html">Portfolio Item 8 Case Problem 3</a></li>
+        <li><a href="*">Portfolio Item 8 Case Problem 4 (Didn't complete)</li>
 
 
         </ul>
