--- a/webdesign/classfiles.html
+++ b/webdesign/classfiles.html
@@ -29,11 +29,11 @@
         <li><a href="/webdesign/bmtour.html">Portfolio Item 3</a></li>
         <li><a href="/webdesign/longs.html">Portfolio Item 4</a></li>
         <li><a href="/webdesign/feb.html">Portfolio Item 5</a></li>
-        <li><a href="/webdesign/cssdemo.html">Portfolio Item 6</a>a</li>
+        <li><a href="/webdesign/cssdemo.html">Portfolio Item 6</a></li>
         <li><a href="/webdesign/fractal.html">Portfolio Item 7 Case Problem 3</a></li>
         <li><a href="/webdesign/byso.html">Portfolio Item 7 Case Problem 4</a></li>
         <li><a href="/webdesign/mess.html">Portfolio Item 8 Case Problem 3</a></li>
-        <li><a href="*">Portfolio Item 8 Case Problem 4 (Didn't complete)</li>
+        <li><a href="">Portfolio Item 8 Case Problem 4 (Didn't complete)</li>
 
 
         </ul>
