--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <title>William Eisenberger</title>
+    <base href="https://bjlinville1.github.io/billyxdude12.github.io/">
     
     <link rel="stylesheet" type="text/css" href="/css/main.css">
   
