--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -75,7 +75,7 @@
       
     </a-entity>
     
-      <button type="button" id=button1 style= "
+<!--       <button type="button" id=button1 style= "
         -webkit-appearance: none;
         border-radius: 2;
         background-color: white;
@@ -89,7 +89,7 @@
         text-align: center;
         z-index: 1;">
         <a href="https://businesssolutions.sprint.com/save/?ECID=vanity:save">Visit Page</a>
-      </button>  
+      </button>   -->
   
   <div class="carousel">
     <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
