--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -91,7 +91,7 @@
         <a href="https://businesssolutions.sprint.com/save/?ECID=vanity:save">Visit Page</a>
       </button>   -->
   
-  <div class="carousel">
+  <div class="carousel" style="bottom:2%;">
     <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
     <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
     <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
@@ -114,6 +114,14 @@ function showButton(){
 setTimeout("showButton()", 47000);
 
 </script>
+
+  <div class="carousel">
+    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+  </div>
 
 </body>
 </html>
