--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -75,7 +75,7 @@
       
     </a-entity>
     
-<!--       <button type="button" id=button1 style= "
+      <button type="button" id=button1 style= "
         -webkit-appearance: none;
         border-radius: 2;
         background-color: white;
@@ -89,9 +89,14 @@
         text-align: center;
         z-index: 1;">
         <a href="https://businesssolutions.sprint.com/save/?ECID=vanity:save">Visit Page</a>
-      </button>   -->
+      </button>  
   
-  <div class="carousel" style="bottom:2%;">
+  <div class="carousel" style= "
+        -webkit-appearance: none;
+        position: fixed;
+        bottom: 2%; 
+        text-align: center;
+        z-index: 1;">
     <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
     <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
     <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
@@ -114,14 +119,6 @@ function showButton(){
 setTimeout("showButton()", 47000);
 
 </script>
-
-  <div class="carousel">
-    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
-    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
-    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
-    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
-    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
-  </div>
 
 </body>
 </html>
