--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -93,8 +93,15 @@
   
   <div class="carousel" style= "
         -webkit-appearance: none;
+        border-radius: 2;
+        background-color: white;
         position: fixed;
+        font-size: 4;
+        display: none;
         bottom: 2%; 
+        height: 50px;
+        width: 41.6px;
+        left: 40%;
         text-align: center;
         z-index: 1;">
     <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
