--- a/sprintDEMO.html
+++ b/sprintDEMO.html
@@ -15,9 +15,9 @@
 
   <!-- 8thWall Web - Replace the app key here with your own app key -->
   <script src="//apps.8thwall.com/xrweb?appKey=knUqHjp0A7EbppRV2HMS9E5FaDZLVaZooq6LGUHHZDPObhPoc6KymCynlngs9lq4jfdbJL"></script>
-  
+
   <!-- Materialize cdn links -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"> 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 
   <script type="application/javascript">
@@ -32,7 +32,14 @@
 </head>
 
 <body>
-  
+  <div class="carousel" style= "position: fixed; bottom: 0; z-index: 1200;">
+    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
+    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
+    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
+    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
+    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+  </div>
+
   <a-scene
     xrweb="disableWorldTracking: true"
     xrextras-gesture-detector
@@ -44,7 +51,7 @@
 
 
     <a-assets>
-   
+
 	  <img id="SprintImage" src="https://static.wixstatic.com/media/53058a_d65b0fffe7794b6293173d3bd3688cfd~mv2.jpg/v1/fill/w_480,h_640/Sprint-target.jpg">
       <video
         id="currentVideo"
@@ -67,65 +74,14 @@
     <a-light type="ambient" intensity="1"></a-light>
 
     <!-- Note: "name:" must be set to the name of the image target uploaded to the 8th Wall Console -->
-    <a-entity 
+    <a-entity
       xrextras-named-image-target="name: sprint"
       xrextras-play-video="video: #currentVideo; thumb: #sprintImage; canstop: true"
       geometry="primitive: plane; height: 0.85; width: 1.38;"
       >
-      
+
     </a-entity>
-    
-<!--       <button type="button" id=button1 style= "
-        -webkit-appearance: none;
-        border-radius: 2;
-        background-color: white;
-        position: fixed;
-        font-size: 4;
-        display: none;
-        bottom: 2%; 
-        height: 50px;
-        width: 41.6px;
-        left: 40%;
-        text-align: center;
-        z-index: 1;">
-        <a href="https://businesssolutions.sprint.com/save/?ECID=vanity:save">Visit Page</a>
-      </button>   -->
-  
-  <div class="carousel" style= "
-        -webkit-appearance: none;
-        border-radius: 2;
-        background-color: white;
-        position: fixed;
-        font-size: 4;
-        display: none;
-        bottom: 2%; 
-        height: 50px;
-        width: 41.6px;
-        left: 40%;
-        text-align: center;
-        z-index: 1;">
-    <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
-    <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
-    <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
-    <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
-    <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
-  </div>
-
   </a-scene>
-<script>
-
-//var linkedButton = document.getElementById("button");
-//var video = document.getElementById("currentVideo");
-// video.onended = function() {
-// 	linkButton.style.opacity = 1;
-// }
-
-function showButton(){
-  document.getElementById("button1").style.display="inline-block";
-}
-setTimeout("showButton()", 47000);
-
-</script>
 
 </body>
 </html>
